syntax = "proto3";

package block_storage;

import "google/protobuf/empty.proto";
import "explorer.proto";

// --------------------------------------------------------------
// ----------- Service definition for BlockStorage
// --------------------------------------------------------------
service BlockStorage {
    rpc GetBlockByBlockId(types.BlockId) returns (types.GetBlockByBlockIdResponse);
    rpc GetBlockSummaryList(types.GetBlockSummaryListRequest) returns (types.GetBlockSummaryListResponse);
    rpc LatestBlockHeight(google.protobuf.Empty) returns (types.LatestBlockHeightResponse);
    rpc CurrentDifficulty(google.protobuf.Empty) returns (types.DifficultHashRate);
}
